# django_template

./: .dockerignore  Makefile  entrypoint.sh  env.example  manage.py  pyproject.toml
